After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 689672 - media-keys: make 'search' launch shell search instead of gnome-search-tool
media-keys: make 'search' launch shell search instead of gnome-search-tool
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: media-keys
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on: 700536
Blocks:
 
 
Reported: 2012-12-05 00:50 UTC by Matthias Clasen
Modified: 2013-05-17 16:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
media-keys: Rename osd_proxy to shell_proxy (2.93 KB, patch)
2013-05-17 16:38 UTC, Bastien Nocera
reviewed Details | Review
media-keys: Show shell search for search button (1.87 KB, patch)
2013-05-17 16:39 UTC, Bastien Nocera
accepted-commit_now Details | Review
media-keys: Rename osd_proxy to shell_proxy (4.42 KB, patch)
2013-05-17 16:49 UTC, Bastien Nocera
committed Details | Review
media-keys: Show shell search for search button (1.87 KB, patch)
2013-05-17 16:53 UTC, Bastien Nocera
committed Details | Review

Description Matthias Clasen 2012-12-05 00:50:04 UTC
It makes a lot more sense for the 'search' shortcut to bring up the gnome-shell overview and focus the search entry, than to launch gnome-search-tool.
Comment 1 Florian Müllner 2012-12-05 15:25:45 UTC
That's basically what <super> and <alt>f1 do (minus explicitly focusing the search entry, but keyboard input is redirected to the entry anyway ...), so is it really that useful to add yet another alias? Maybe we should just retire the shortcut?
Comment 2 Bastien Nocera 2012-12-05 15:44:40 UTC
(In reply to comment #1)
> That's basically what <super> and <alt>f1 do (minus explicitly focusing the
> search entry, but keyboard input is redirected to the entry anyway ...), so is
> it really that useful to add yet another alias? Maybe we should just retire the
> shortcut?

Both combinations are toggles, and they don't focus the text entry (eg. the OSK wouldn't show up if I pressed this combination).
Comment 3 Florian Müllner 2012-12-05 16:20:57 UTC
I wasn't considering the OSK case, good point.
Comment 4 Matthias Clasen 2013-05-17 10:59:33 UTC
this would still be nice to have
Comment 5 Bastien Nocera 2013-05-17 14:12:06 UTC
It's waiting on the shell implementation of the necessary D-Bus API. The implementation on the g-s-d side is trivial.
Comment 6 Florian Müllner 2013-05-17 14:14:32 UTC
Heh, the implementation on the shell side is trivial as well :-)
Comment 7 Bastien Nocera 2013-05-17 16:38:50 UTC
Created attachment 244554 [details] [review]
media-keys: Rename osd_proxy to shell_proxy

We'll also use it for other things.
Comment 8 Bastien Nocera 2013-05-17 16:39:04 UTC
Created attachment 244555 [details] [review]
media-keys: Show shell search for search button
Comment 9 Florian Müllner 2013-05-17 16:46:03 UTC
Review of attachment 244554 [details] [review]:

Looks good, but you should rename osd_cancellable as well
Comment 10 Florian Müllner 2013-05-17 16:46:38 UTC
Review of attachment 244555 [details] [review]:

Yes.
Comment 11 Bastien Nocera 2013-05-17 16:49:00 UTC
Created attachment 244558 [details] [review]
media-keys: Rename osd_proxy to shell_proxy

We'll also use it for other things. Also rename osd_cancellable
to match.
Comment 12 Florian Müllner 2013-05-17 16:52:13 UTC
Review of attachment 244558 [details] [review]:

Yes, but remember to rename it in the other patch as well :)
Comment 13 Bastien Nocera 2013-05-17 16:53:58 UTC
Created attachment 244559 [details] [review]
media-keys: Show shell search for search button
Comment 14 Bastien Nocera 2013-05-17 16:57:24 UTC
Pushed to gnome-3-8 and master.

Attachment 244558 [details] pushed as 2b6cf68 - media-keys: Rename osd_proxy to shell_proxy
Attachment 244559 [details] pushed as 36626bb - media-keys: Show shell search for search button