media-keys: Rename osd_proxy to shell_proxy

We'll also use it for other things. Also rename osd_cancellable
to match.

https://bugzilla.gnome.org/show_bug.cgi?id=689672

Conflicts:
	plugins/media-keys/gsd-media-keys-manager.c